website/websites/u64q/code/pystone.1.pyston.log

 Thu, 29 Oct 2020 13:15:23 GMT

COMMAND LINE:
 /usr/bin/pyston pystone.pyston 50000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "pystone.pyston", line 62
    print loops
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(loops)?
